<resources>
    <string name="app_name">摩卡相机</string>
    <string name="picture_taken">Picture taken</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="switch_flash">Switch flash</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="NoImg">找不到图片</string>
    <string name="main_take_photo">拍照</string>
    <string name="receive_photo">收到图片</string>
    <string name="input_token">请输入含分享码信息</string>
    <!--<string name="server_download">http://118.89.193.105:9091/</string>-->
    <string name="server_download">http://35.194.250.61:9091/</string>
    <string name="downloading">正在加载图片</string>
    <string name="download_error">网络错误 轻触重试</string>
    <string name="file_has_save_to">图片已经保存到</string>
    <string name="choose_image">请选择图片</string>
    <string name="loading">正在加载</string>
    <string name="error_token">分享码错误，请检查后重试</string>
    <string name="recognizedToken">检测到分享码</string>
    <string name="publish_image">发布拼图</string>
    <string name="join_image">参与拼图</string>
    <string name="touch_back">轻触返回</string>
    <string name="version">v1.0.0-beta</string>
    <string name="hust">华中科技大学</string>
    <string name="uniquestudio">联创团队</string>
    <string name="unique_site">https://www.hustunique.com/</string>
    <string name="qq_group">用户群\n576788414\n在APP使用过程中有任何问题或者建议都欢迎联系我们，我们永远在线等你~\n
        邮件反馈\nviseator@gmail.com\n开源地址\nhttps://github.com/viseator/MontageCam</string>
</resources>
